--- a/frontend/src/stylus/main.styl
+++ b/frontend/src/stylus/main.styl
@@ -1,3 +1,3 @@
-$body-font-family = 'Lato', sans-serif;
+$body-font-family = 'Nunito', sans-serif;
 $heading-font-family = 'Marck Script', cursive;
 @require '~vuetify/src/stylus/main.styl'
