changed follow tags, updated profile and tag page design

--- a/nuxt-frontend/css/main.scss
+++ b/nuxt-frontend/css/main.scss
@@ -3,7 +3,7 @@
 }
 /** Transitions */
 .application {
-  background: #f9f9f9 !important;
+  background: #f7fafc !important;
 }
 .fade-enter-active,
 .fade-leave-active {
